--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/app_icon.ico" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta http-equiv="Refresh" content="2; url=public/index.html">
+  <meta http-equiv="Refresh" content="2; url=/index.html">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
     integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
